# thevivekpandey.github.io

./: _config.yml  a.txt  index.html  index.md  params.json  thank_you.html
_layouts/: default.html
_posts/: 2014-02-22-some-auction-strategies.md
_site/: index.html
aimo3rl/: 20b-120b-on-astral-bench-10-attemps-get-rl-data.ipynb  SETUP_H100.md  debug_tokens.py  dequantize_mxfp4.py  holistic_quant.py  inference_main.py  main.py  merge_lora.py  probe_lora_infer.py  probe_lora_vllm_chat.py  probe_vllm_chat.py  pyproject.toml  qlora.py  quantize_nf4.py  requirements.txt  rl-question-answer.jsonl  server.py  server_lora.py  sitecustomize.py  test_mxfp4_lora.py  train_qlora_grpo.py  train_qlora_grpo_codex.py  train_qlora_grpo_gemini.py  train_qlora_saved.py  training_gemini.py
chess/: lichess_bot.py
posts/: 2014-02-22-some-auction-strategies.html  2014-03-02-slow-down-sir-harmonic-mean-is-against-you.html  2014-03-02-slow-down-sir-harmonic-mean-is-against-you.md  2015-10-23-projection-in-mongodb.html  2015-10-23-projection-in-mongodb.md  2017-03-13-write-modular-code-an-example.html  2017-03-18-a-probability-question.html  2017-04-15-loss-of-authenticity.html  2017-07-20-infarct.html  2017-07-20-infract.html  2017-07-23-running.html  2017-08-09-food-for-brain.html  2017-08-21-a-neat-trick.html  2017-08-22-programming-language-in-new-world.html  2017-08-23-some-terms-related-to-deep-learning.html  2017-08-26-why-deep-learning-is-surprising.html  2017-08-28-deeplearning-coursera-course-1.html  2017-08-28-notes-on-logistic-regression.html  2017-09-28-name-fail.html  (+80 more)
(+181 files in other folders)
