[project]
name = "qlora"
version = "0.1.0"
description = "QLoRA GRPO training for GPT-OSS-120B on math olympiad problems"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0,<2.11.0",
    "transformers>=4.45.0",
    "datasets>=2.16.0",
    "peft>=0.10.0",
    "trl>=0.15.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "flash-attn>=2.5.0",
    "kernels>=0.12.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

